[gd_scene load_steps=12 format=3 uid="uid://b4clhfgggbtf2"]

[ext_resource type="Script" uid="uid://e1lb2qeev1oj" path="res://scripts/menu_screen.gd" id="1_e6vgv"]
[ext_resource type="FontFile" uid="uid://dlqog04epd2cu" path="res://assets/Poppins-Regular.ttf" id="1_yft84"]
[ext_resource type="FontFile" uid="uid://cc7j3842jav1u" path="res://assets/dreamplanner.otf" id="3_pn7wg"]
[ext_resource type="Texture2D" uid="uid://ckw0lylnojbwb" path="res://assets/fucknah.png" id="4_sm2ni"]
[ext_resource type="Texture2D" uid="uid://clm7dkh8kv0xi" path="res://assets/—Pngtree—element float round blue bubble_3917372.png" id="5_73fcp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qg5yo"]
bg_color = Color(0.7771888, 1.6828436, 1.5820898, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yft84"]
bg_color = Color(1, 1, 0.8392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6vgv"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn7wg"]
bg_color = Color(1, 0.8024569, 0.8389701, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6vgv"]

[sub_resource type="LabelSettings" id="LabelSettings_pn7wg"]
font = ExtResource("3_pn7wg")
font_size = 102
font_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(1, 1, 1, 1)
shadow_offset = Vector2(1, 3)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6vgv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qg5yo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 91.00003
offset_top = 308.00003
offset_right = 237.77661
offset_bottom = 434.00003
scale = Vector2(1.5727866, 1.6604438)
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_yft84")
theme_override_styles/normal = SubResource("StyleBoxFlat_yft84")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6vgv")
theme_override_styles/hover = SubResource("StyleBoxFlat_pn7wg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6vgv")
text = "  Play"
alignment = 0

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_yft84")
theme_override_styles/normal = SubResource("StyleBoxFlat_yft84")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6vgv")
theme_override_styles/hover = SubResource("StyleBoxFlat_pn7wg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6vgv")
text = "  Options
"
alignment = 0

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_yft84")
theme_override_styles/normal = SubResource("StyleBoxFlat_yft84")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6vgv")
theme_override_styles/hover = SubResource("StyleBoxFlat_pn7wg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6vgv")
text = "  Credits"
alignment = 0

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_yft84")
theme_override_styles/normal = SubResource("StyleBoxFlat_yft84")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6vgv")
theme_override_styles/hover = SubResource("StyleBoxFlat_pn7wg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e6vgv")
text = "  Exit"
alignment = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -154.0
offset_top = 138.0
offset_right = 640.0
offset_bottom = 237.0
text = "JASKIRAT"
label_settings = SubResource("LabelSettings_pn7wg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-55, -21)

[node name="Fucknah" type="Sprite2D" parent="Node2D"]
position = Vector2(873, 335)
scale = Vector2(0.4596354, 0.4429941)
texture = ExtResource("4_sm2ni")

[node name="—pngtree—elementFloatRoundBlueBubble3917372" type="Sprite2D" parent="Node2D"]
position = Vector2(881.99994, 355.00003)
scale = Vector2(0.37949994, 0.39419648)
texture = ExtResource("5_73fcp")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 252.0
offset_right = 264.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_pn7wg")
theme_override_font_sizes/font_size = 24
text = "HACK CLUB CAMPFIRE."
horizontal_alignment = 1
vertical_alignment = 1
